--- a/index.html
+++ b/index.html
@@ -9,42 +9,27 @@
 	
 <ul class="navbar cf">
 			<li><a href="#">HOME</a></li>
-			
-							<li><a href="">ABOUT US</a></li>
-							<li><a href="">CWS</a></li>
-							<li><a href="">DISTRICTS</a>
-								<ul>
-									<li><a href="#">sub sub item 1</a></li>
-									<li><a href="#">sub sub item 2</a>
-										<ul>
-                      <li><a href="#">xxx</a>
+			<li><a href="">ABOUT US</a></li>
+			<li><a href="">item3</a></li>
+			<li><a href="">item4</a>
+				<ul>
+					<li><a href="#">sub sub item 1</a></li>
+					<li><a href="#">sub sub item 2</a>
+						<ul>
+                     <li><a href="#">item</a>
 				<ul>
 					<li><a href="#">sub item 1</a></li>
 					<li><a href="#">sub item 2</a></li>
-					<li><a href="#">sub item 3</a>
-						<ul>
-											<li><a href="#">sub sub sub item 1</a></li>
-											<li><a href="#">sub sub sub item 2</a></li>
-											<li><a href="#">sub sub sub item 3</a>
-                      <ul>
-                        <li><a href="#">sub item 1</a></li>
-                        <li><a href="#">sub item 2</a></li>
-                        <li><a href="#">sub item 3</a></li>
-                      </ul>
-                      </li>
-										</ul>
-									</li>
-									<li><a href="#">sub sub item 3</a></li>
-									<li><a href="#">sub sub item 4</a></li>
-									<li><a href="#">sub sub item 5</a>
-                    
-                  </li>
-								</ul>
-							</li>
+					<li><a href="#">sub item 3</a></li>
+					<li><a href="#">sub sub item 3</a></li>
+					<li><a href="#">sub sub item 4</a></li>
+					<li><a href="#">sub sub item 5</a></li>
+				</ul>
+					</li>
 						</ul>
 					</li>
 					<li><a href="#">item a little longer</a></li>
-				</ul>
+				</ul> 
 			</li>
 			<li><a href="#">item 4</a></li>
 			<li><a href="#">item 5</a></li>
