--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
 	
 <ul class="navbar cf">
-			<li><a href="#">HOME</a></li>
-			<li><a href="">ABOUT US</a></li>
-			<li><a href="">item3</a></li>
-			<li><a href="">item4</a>
-				<ul>
+			<li><a href="#">о себе</a></li>
+			<li><a href="#">чат</a></li>
+			<li><a href="#">почта</a></li>
+			<li><a href="#">партнёры</a>
+				<!-- <ul>
 					<li><a href="#">sub sub item 1</a></li>
 					<li><a href="#">sub sub item 2</a>
 						<ul>
@@ -29,15 +29,19 @@
 						</ul>
 					</li>
 					<li><a href="#">item a little longer</a></li>
-				</ul> 
+				</ul>  -->
 			</li>
-			<li><a href="#">item 4</a></li>
-			<li><a href="#">item 5</a></li>
+			<li><a href="#">идеи</a></li>
+			<li><a href="#">конкурсы</a></li>
+			<li><a href="#">обучение</a></li>
+			<li><a href="#">событие</a></li>
+			<li><a href="#">помошник</a></li>
 		</ul>
 
 
 <section class="tex">
-	<p class="tex-p">Извиниет, ведутся технические работы</p>
+	<p class="tex-p">Извините, ведутся технические работы</p>
+	<img class="img-error"  src="img/1.webp" alt="">
 </section>
 
 
