--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 <section class="tex">
-	<p class="tex-p">Извините, ведутся технические работы</p>
+	<p class="tex-p">Извините, ведутся технические работы.Всё будет исправлено в ближайшее время!</p>
 	<img class="img-error"  src="img/1.webp" alt="">
 </section>
 
